[project]
name = "entari-plugin-arkgacha"
version = "0.1.0"
description = "Entari plugin for arknights gacha"
authors = [
    {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"},
]
dependencies = [
    "arclet-entari>=0.10.3",
    "arknights-toolkit>=0.7.7",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "arclet-entari[yaml]>=0.10.1",
    "httpx<=0.27.0",
    "watchfiles>=1.0.3",
]
