[project]
name = "entari-plugin-arkgacha"
version = "0.1.0"
description = "Entari plugin for arknights gacha"
authors = [
    {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"},
]
dependencies = [
    "arclet-entari>=0.12.0",
    "arknights-toolkit>=0.7.7",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "arclet-entari[yaml,reload]>=0.12.0",
    "arclet-letoderea>=0.14.7",
]
