[project]
name = "entari-plugin-arkgacha"
version = "0.5.1"
description = "Entari plugin for arknights gacha"
authors = [
    {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"},
]
dependencies = [
    "arclet-entari>=0.18.0rc1",
    "arknights-toolkit>=0.8.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[dependency-groups]
dev = [
    "arclet-entari[yaml,reload]>=0.12.0",
]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
